<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="right"
            android:text="@string/_0"
            android:textSize="30sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="25dp" >
                <Button
                    android:id="@+id/AC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ac" />
                <Button
                    android:id="@+id/sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign" />
                <Button
                    android:id="@+id/divide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/divide" />
                <Button
                    android:id="@+id/multiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiply" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="25dp">
                <Button
                    android:id="@+id/seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7" />
                <Button
                    android:id="@+id/eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8" />
                <Button
                    android:id="@+id/nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9" />
                <Button
                    android:id="@+id/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="25dp">
                <Button
                    android:id="@+id/four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4" />
                <Button
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5" />
                <Button
                    android:id="@+id/six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6" />
                <Button
                    android:id="@+id/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="25dp">
                <Button
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1" />
                <Button
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2" />
                <Button
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3" />
                <Button
                    android:id="@+id/equals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equals" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="25dp">
                <Button
                    android:id="@+id/zero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0" />
                <Button
                    android:id="@+id/point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point" />
                <Button
                    android:id="@+id/backspace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backspace" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>